producto relacionadp con el proveedor. Catergorias con anidamiento
